[package]
name = "catrina-bundler"
version = "0.1.0"
authors = ["jonhteper <jonhteper@triamseletea.com>"]
edition = "2018"

[profile.release]
lto = true


[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
fs_extra = "1.2.0"
eyre = "0.6.5"
clap = "2.33.3"
rand = "0.8.4"
substring = "1.4.5"
html-minifier = "3.0.13"
anyhow = "1.0.44"